FixSpacingInLayout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@ header span:first-child {
   font-weight: 400;
 }
 header span:last-child {
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-weight: 800;
 }
 header h2 {
